Update modal animation

--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -3,7 +3,8 @@
 @import "main-menu";
 @import "tns-slider-global";
 @import "tns-single";
-@import "main"
+@import "main";
+@import "modal-login"
 
 
 
