--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -10,6 +10,7 @@
 	--color-skyLow		: #233c74;
 	--color-grayLow		: #858585;
 	--color-third      	: #FF3C32;
+	--color-background  : white;
 }
 // Sass Color Vars
 $color-first 			: var(--color-first			);
