--- a/src/pug/components/top-nav.pug
+++ b/src/pug/components/top-nav.pug
@@ -8,12 +8,12 @@ nav(class='top-nav')
 		ul()
 			div(class="btn-ml")
 				button(class="btn-top-nav") REGISTRO
-				button(class="btn-top-nav btn-dark") INGRESAR
+				button(class="modal-button btn-top-nav btn-dark") INGRESAR
 		button(type='button', class='top-nav__mb-iconMenu hamburger hamburger--slider-r')
 			span.hamburger-box
 				span.hamburger-inner
 
 div(class="btn-m-nav btn-ml")
 	button(class="btn-top-nav") REGISTRO
-	button(class="btn-top-nav btn-dark") INGRESAR
+	button(class="modal-button-m btn-top-nav btn-dark") INGRESAR
 
