--- a/src/pug/components/modal-login.html
+++ b/src/pug/components/modal-login.html
@@ -1,9 +1,9 @@
 <div class="modal">
   <div class="modal-container">
     <div class="modal-left">
-	  <img src="assets/img/Logo.png" alt="">
+	  <img src="assets/img/logo.png" alt="">
       <h1 class="modal-title">Welcome!</h1>
-      <p class="modal-desc">Fanny PACK hexagon food truck, street art waistcoat kitsch.</p>
+      <p class="modal-desc">Fanny pack hexagon food truck, street art waistcoat kitsch.</p>
       <div class="input-block">
         <label for="email" class="input-label">Email</label>
         <input type="email" name="email" id="email" placeholder="Email">
