--- a/src/pug/components/top-nav.pug
+++ b/src/pug/components/top-nav.pug
@@ -7,13 +7,13 @@ nav(class='top-nav')
 			//<li><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"></i><span class="text-phone"></span></a></li>
 		ul()
 			div(class="btn-ml")
-				button(class="btn-top-nav") REGISTRO
+				button(class="btn-top-nav"): a(href="register.html") REGISTRO
 				button(class="modal-button btn-top-nav btn-dark") INGRESAR
 		button(type='button', class='top-nav__mb-iconMenu hamburger hamburger--slider-r')
 			span.hamburger-box
 				span.hamburger-inner
 
-div(class="btn-m-nav btn-ml")
-	button(class="btn-top-nav") REGISTRO
-	button(class="modal-button-m btn-top-nav btn-dark") INGRESAR
 
+div(class="btn-m-nav btn-ml")
+	button(class="btn-top-nav"): a(href="register.html") REGISTRO
+	button(class="modal-button-m btn-top-nav btn-dark") INGRESAR
