--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -4,7 +4,8 @@
 @import "tns-slider-global";
 @import "tns-single";
 @import "main";
-@import "modal-login"
+@import "modal-login";
+@import "register-main"
 
 
 
