--- a/src/scss/config/_variables.scss
+++ b/src/scss/config/_variables.scss
@@ -11,6 +11,7 @@
 	--color-grayLow		: #858585;
 	--color-third      	: #FF3C32;
 	--color-background  : white;
+	--color-inputs		: rgba(0, 0, 0, 0.1);
 }
 // Sass Color Vars
 $color-first 			: var(--color-first			);
