--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -1,11 +1,14 @@
 extends ../config/template
 append config
 	-currentPage		= "home"
-	-siteName			= 'kikeestrada'
+	-siteName			= 'Central Apuestas'
 	-content			= 'content'
 	-pageDescription	= 'This website contains a collection of projects developed by Enrique Estrada using a Gulp boilerplate developed by him'
 block main-header
-block main-container 
-	include ../components/markdown
+block main-container
+	
+	include ../components/tns-slider
+	include ../components/main-container-home
+	include ../components/main-container
 block main-footer
 block scripts
