--- a/src/pug/pages/register.pug
+++ b/src/pug/pages/register.pug
@@ -1,12 +1,12 @@
 extends ../config/template
 append config
-	-currentPage = "portfolio"
-	-siteName = 'kikeestrada'
+	-currentPage = "Login"
+	-siteName = 'Register'
 	-content = 'content'
 	-pageDescription = 'This website contains a collection of projects developed by Enrique Estrada using a Gulp boilerplate developed by him'
 block main-header
 block main-container
-	include ../components/json-data
+	include ../components/register-main
 block main-footer
 block scripts
 
