--- a/src/pug/components/register-main.pug
+++ b/src/pug/components/register-main.pug
@@ -1,4 +1,4 @@
-div(class="main-register")
+div(class="main-con")
 	div(class="ed-grid lg-grid-6")
 		img(src="/assets/img/MasDe200.png", alt="")
 	div(class="container-register")
