--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -19,6 +19,7 @@ body {
 	background 		: var(--body-bg);
 	display        	: flex;
 	flex-direction 	: column;
+	padding-top: 3.5rem;
 }
 
 .main-header{}
