--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,3 +1,4 @@
+@import "con";
 @import "img-gallery";
 @import "top-nav";
 @import "main-menu";
@@ -5,7 +6,9 @@
 @import "tns-single";
 @import "main";
 @import "modal-login";
-@import "register-main"
+@import "register-main";
+
+
 
 
 
