--- a/src/pug/components/banca-main.pug
+++ b/src/pug/components/banca-main.pug
@@ -3,7 +3,7 @@ div(class="main-con")
 		img(src="/assets/img/banca.jpg", alt="")
 	div(class="main-cont")
 		div(class="container-cont")
-			h1 Banca
+			h1(class="titles") Banca
 			h4 Variedad de metodos de pago.
 			div(class="ed-grid m-grid-4 s-grid-1 ")
 				include ../config/utilis/metodosPagos
