--- a/src/pug/components/contact-main.pug
+++ b/src/pug/components/contact-main.pug
@@ -3,6 +3,6 @@ div(class="main-con")
 		img(src="/assets/img/Baloncesto.jpg", alt="")
 	div(class="main-cont")
 		div(class="container-cont")
-			h1 Ponte en contacto con nosotros hoy.
+			h1(class="titles") Ponte en contacto con nosotros hoy.
 			div(class="text-cont")
 				include:markdown-it(html) ../md/contact.md
