--- a/src/pug/components/top-nav.pug
+++ b/src/pug/components/top-nav.pug
@@ -4,7 +4,7 @@ nav(class='top-nav')
 			img(src='assets/img/logo.png', alt='', class='top-nav__logo')
 		ul(class='top-nav__menu')
 			include ../config/utilis/top-menu
-			//<li><a class="phone-info whatsapp" href="https://wa.me/56932130074"><i class="fa fa-whatsapp"></i><span class="text-phone"></span></a></li>
+			li(class="top-nav__li"): a(class="phone-info whatsapp" href="https://wa.me/56932130074"): i(class="fa fa-whatsapp"): i: span(class="text-phone")
 		ul()
 			div(class="btn-ml")
 				button(class="btn-top-nav"): a(href="register.html") REGISTRO
