--- a/src/scss/components/_con.scss
+++ b/src/scss/components/_con.scss
@@ -7,7 +7,7 @@
 			top: 0;
 			left: 0;
 			object-fit: cover;
-			filter: blur(5px);
+			filter: blur(4px);
 
 			@include from(m){
 				top: 0px;
@@ -33,7 +33,20 @@
 			margin: 5% auto 0;
 			position: relative;
 			z-index: 1;
-	
+			h2{
+				color: var(--color-skyLow);
+			}
+
+			.sub-cont{
+				h2{
+					color: white;
+				}
+				.container-cont{
+					color: white;
+					background-color: var(--color-skyLow);
+				}
+				
+			}
 			.text-cont{
 				font-size: 1.1rem;
 				
@@ -43,6 +56,10 @@
 					@include from(s){
 						text-align: center;
 					}
+			}
+			.font-low{
+				color: var(--color-grayLow);
+				
 			}
 
 			.img-metodosPay{
