--- a/src/pug/components/tns-slider.pug
+++ b/src/pug/components/tns-slider.pug
@@ -1,4 +1,3 @@
 div(class="slider-container")
 	div(class='tns-single sep-top' id='tnsSingle')
-		div: div(class='tns-single__content'): img(src="assets/img/mlb.jpg", alt="mlb")
-		div: div(class='tns-single__content'): img(src="assets/img/ufc.jpg", alt="ufc")
+		include ../config/utilis/img-slider
