--- a/src/pug/config/utilis/imgs-home.pug
+++ b/src/pug/config/utilis/imgs-home.pug
@@ -1,6 +1,6 @@
 mixin pushImgsHome()
-	div(class='ed-grid m-grid-1 lg-grid-1 row-gap ')
-		div(class="ed-grid m-grid-4 s-grid-1 ")
+	div(class='ed-grid m-grid-1 lg-grid-1 ')
+		div(class="ed-grid m-grid-4 s-grid-1 rows-gap gap-2")
 			-for(var i = 0; i < imgs_home.length; i++)
 				-var img= imgs_home[i].img 
 				-var text_title= imgs_home[i].title 
@@ -8,7 +8,10 @@ mixin pushImgsHome()
 				+pushImg(img, text_class, text_title)
 
 mixin pushImg(img, text_class, text_title)
-	img(class=text_class class="images-main" src=img, alt=text_title)
+	div(class=text_class, class="container-main-img")
+		img(class="images-main" src=img, alt=text_title)
+		div(class="container-btn")
+			button(class="btn") APUESTA AHORA
 	
 	
 +pushImgsHome()
