--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,17 +1,67 @@
-.images-main{
-	cursor: pointer;
-	border-radius: 10px;
+.container-main-img{
+	position: relative;
+	width: 100%;
+	max-width: auto;
 	transform-style: preserve-3d;
 	transition: .3s;
 	transform: scale(1);
+
+	.images-main{
+		border-radius: 16px;
+		box-shadow: 0px 0px 5px var(--color-skyLow);
+		height: 100%;
+		cursor: pointer;
+		border-radius: 10px;
+	
+	
+		
+	}
+	
+	.container-btn{
+		max-width: 300px;
+		.btn{
+			position: absolute;
+			top: 85%;
+			left: 85%;
+			transform: translate(-70%, -70%);
+			-ms-transform: translate(-50%, -50%);
+			background-color: var(--color-sky);
+			color: white;
+			font-size: 12px;
+			padding: 5px 5px;
+			width: 7rem;
+			border: none;
+			cursor: pointer;
+			border-radius: 5px;
+			text-align: center;
+			transform-style: preserve-3d;
+			transition: .3s;
+			@include from(m){
+				left: 77%;
+			}
+			@include from(l){
+				left: 85%;
+			}
+		}
+
+		.btn:hover{
+			background-color: var(--color-skyLow);
+		}
+	}
+	
+
+
+}
+
+.container-main-img:hover {
+	@include from(m){
+	transform: scale(1.04);
+	}
 	
 }
-.images-main:hover {
-	@include from(m){
-	transform: scale(1.05);
-	}
-}
+
 
 .main-container{
 	margin-bottom: 2rem;
+	
 }
