--- a/src/pug/components/top-nav.pug
+++ b/src/pug/components/top-nav.pug
@@ -8,7 +8,7 @@ nav(class='top-nav')
 		ul()
 			div(class="btn-ml")
 				button(class="btn-top-nav"): a(href="register.html") REGISTRO
-				button(class="modal-button btn-top-nav btn-dark") INGRESAR
+				button(class="modal-button btn-top-nav btn-dark") Login
 		button(type='button', class='top-nav__mb-iconMenu hamburger hamburger--slider-r')
 			span.hamburger-box
 				span.hamburger-inner
