--- a/src/scss/components/_tns-slider-global.scss
+++ b/src/scss/components/_tns-slider-global.scss
@@ -32,7 +32,7 @@
         width               : 9px;
         height              : 9px;
         padding             : 0;
-        margin              : 0 5px;
+        margin              : 12px;
         border-radius       : 50%;
         background          : #ddd;
         border              : 0;
