Push bugs corregidos

--- a/src/pug/components/caballos-main.pug
+++ b/src/pug/components/caballos-main.pug
@@ -12,6 +12,7 @@ div(class="main-con")
 			div(class='ed-container')
 div(class='ed-item')
 	div(class='tabs-container ed-grid')
+		h3 List of Horse Tracks:
 		ul(class='tabs-container__tabs' id='tabs')
 			li(class='tabs-container__tab' id="tableOne") Pistas Principales
 			li(class='tabs-container__tab' id="tableTwo") MINOR TRACKS
