--- a/src/pug/components/modal-login.html
+++ b/src/pug/components/modal-login.html
@@ -33,7 +33,7 @@
       <p class="sign-up">Aún no tienes una cuenta? <a href="/register.html">Registrate Ahora !</a></p>
     </div>
     <div class="modal-right">
-      <img src="assets/img/ufc-ri-modal.png" alt="">
+      <img src="https://media.betimages.com//media/jpg/centraldeapuesta/mlb.jpg" alt="">
     </div>
     <div name="botonClose" class="icon-button close-button">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
