--- a/src/pug/components/reglas-deportes-main.pug
+++ b/src/pug/components/reglas-deportes-main.pug
@@ -73,3 +73,7 @@ div(class="main-con")
 					p(class="a-btn") OLYMPIC RULES <span></span>
 					div(class='a-panel')
 						include:markdown-it(html) ../md/rules-sport/olympic-rules.md
+				div(class="a-container")
+					p(class="a-btn") HANDBALL <span></span>
+					div(class='a-panel')
+						include:markdown-it(html) ../md/rules-sport/handball.md
