--- a/src/scss/components/_con.scss
+++ b/src/scss/components/_con.scss
@@ -9,13 +9,13 @@
 			margin-top: 15rem;
 		}
 		>img{
-			width: 100%;
+				width: 100%;
 				height: 850px;
 				position: absolute;
-				top: 0;
+				top: 55px;
 				left: 0;
 				object-fit: cover;
-
+				z-index: -1;
 				@include from(m){
 					height: 850px;
 				}
@@ -31,7 +31,7 @@
 				top: 0;
 				left: 0;
 				object-fit: cover;
-				
+				z-index: -1;
 		}
 	}
 	.bg-banca{
@@ -54,7 +54,7 @@
 				top: 0;
 				left: 0;
 				object-fit: cover;
-				
+				z-index: -1;
 		}
 	}
 
