--- a/src/scss/components/_tabs.scss
+++ b/src/scss/components/_tabs.scss
@@ -25,10 +25,12 @@
 	}
 
 	&__tab {
+		
+		font-weight: bold;
 		background: #eee;
-		color: #666;
+		color: rgb(0, 0, 0);
 		line-height: 2;
-		padding: 0 1em;
+		padding: 0.3rem 1.4em;
 		border: 1px solid #ccc;
 		margin-right: 1px;
 		border-bottom: none;
